src/objects/Enrolment__c.object
<CustomObject>
    <fields>
        <fullName>Care_Plan_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Objective</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Care_Plan_Objective__c.Client__c</field>
                <operation>equals</operation>
                <valueField>$Source.Young_Person__c</valueField>
            </filterItems>
            <infoMessage>Showing only care plan objectives for this attendee</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Care_Plan_Objective__c</referenceTo>
        <relationshipLabel>Enrolments on courses</relationshipLabel>
        <relationshipName>Enrolments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_joined_program__c</fullName>
        <label>Date joined program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolment_Date__c</fullName>
        <description>This is the date field that may be used in the name of the enrolment</description>
        <formula>if( isblank(Date_joined_program__c), dateValue(CreatedDate),  Date_joined_program__c )</formula>
        <label>Enrolment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program/Service</label>
        <referenceTo>Program_Service__c</referenceTo>
        <relationshipLabel>Enrolments</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_on_Programme__c</fullName>
        <label>Status on Programme</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Young_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrolments</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enrolment</label>
    <nameField>
        <label>Enrolment Ref</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrolments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>